actualizacion con api local y formato de ws de NET Core

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -28,7 +28,7 @@
       <form action="{% url 'validate' %}" method="POST">
       {% csrf_token %}
         <div class="input-group mb-3">
-          <input class="form-control" placeholder="Usuario" id="username" name="username">
+          <input class="form-control" placeholder="Email" id="email" name="email">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
