--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -63,6 +63,27 @@
 
         </div>
       </li>
+            <li class="nav-item dropdown user-menu">
+        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
+          <img src="{% static 'img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2" alt="User Image">
+          <span class="d-none d-md-inline">{{datos.email}}</span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+          <!-- User image -->
+          <li class="user-header bg-primary">
+            <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+
+            <p>
+              {{datos.name}} - {{datos.email}}
+              <small>Inicio de session {{datos.login}} </small>
+            </p>
+          </li>
+          <!-- Menu Footer-->
+          <li class="user-footer">
+            <a href="{% url 'logout' %}" class="btn btn-default btn-flat float-right">Cerrar Sesion</a>
+          </li>
+        </ul>
+      </li>
       <li class="nav-item">
         <a class="nav-link" data-widget="fullscreen" href="#" role="button">
           <i class="fas fa-expand-arrows-alt"></i>
@@ -88,7 +109,16 @@
           <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Admin Profile</a>
+          {% if datos.role == '1' %}
+            <a href="#" class="d-block">Perfil Admin</a>
+          {% endif %}
+          {% if datos.role == '3' %}
+            <a href="#" class="d-block">Perfil Funcionario</a>
+          {% endif %}
+          {% if datos.role == '4' %}
+            <a href="#" class="d-block">Perfil Diseñador</a>
+          {% endif %}
+
         </div>
       </div>
 
@@ -98,6 +128,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
+          {% if datos.role == '1' %}
           <li class="nav-item menu-open">
             <a href="./index2.html" class="nav-link active">
               <i class="nav-icon fa fa-tachometer-alt"></i>
@@ -118,6 +149,14 @@
               <p>Lista de Tareas</p>
             </a>
           </li>
+          {% endif %}
+          {% if datos.role == '3' %}
+            <a href="#" class="d-block">Menu Funcionario</a>
+          {% endif %}
+          {% if datos.role == '4' %}
+            <a href="#" class="d-block">Menu Diseñador</a>
+          {% endif %}
+
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -126,7 +165,8 @@
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
+  {% if datos.role == '1' %}
+    <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
@@ -485,6 +525,8 @@
     </section>
     <!-- /.content -->
   </div>
+  {% endif %}
+
   <!-- /.content-wrapper -->
 
   <!-- Control Sidebar -->
