--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -77,6 +77,17 @@
               {{datos.name}} - {{datos.email}}
               <small>Inicio de session {{datos.login}} </small>
             </p>
+              <span class="users-list-date">Rol :
+                        {% if datos.role == 1 %}
+                        Administrador
+                        {% endif %}
+                        {% if datos.role == 2 %}
+                        Funcionario
+                        {% endif %}
+                        {% if datos.role == 3 %}
+                        Diseñador
+                        {% endif %}
+                        </span>
           </li>
           <!-- Menu Footer-->
           <li class="user-footer">
@@ -109,13 +120,13 @@
           <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          {% if datos.role == '1' %}
+          {% if datos.role == 1 %}
             <a href="#" class="d-block">Perfil Admin</a>
           {% endif %}
-          {% if datos.role == '3' %}
+          {% if datos.role == 2 %}
             <a href="#" class="d-block">Perfil Funcionario</a>
           {% endif %}
-          {% if datos.role == '4' %}
+          {% if datos.role == 3 %}
             <a href="#" class="d-block">Perfil Diseñador</a>
           {% endif %}
 
@@ -128,7 +139,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          {% if datos.role == '1' %}
+          {% if datos.role == 1 %}
           <li class="nav-item menu-open">
             <a href="./index2.html" class="nav-link active">
               <i class="nav-icon fa fa-tachometer-alt"></i>
@@ -150,10 +161,10 @@
             </a>
           </li>
           {% endif %}
-          {% if datos.role == '3' %}
+          {% if datos.role == 2 %}
             <a href="#" class="d-block">Menu Funcionario</a>
           {% endif %}
-          {% if datos.role == '4' %}
+          {% if datos.role == 3 %}
             <a href="#" class="d-block">Menu Diseñador</a>
           {% endif %}
 
@@ -165,7 +176,7 @@
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
-  {% if datos.role == '1' %}
+  {% if datos.role == 1 %}
     <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
@@ -347,13 +358,28 @@
                   <!-- /.card-header -->
                   <div class="card-body p-0">
                     <ul class="users-list clearfix">
+                    {% for team,img in datos.usuarios %}
                       <li>
-                        <img src="{% static 'img/user1-128x128.jpg' %}" alt="User Image">
-                        <a class="users-list-name" href="#">Alexander Pierce
+                        <img src="{{img.picture.large}}" alt="User Image">
+                        <a class="users-list-name" href="#">{{team.nombreUsuario}} {{team.apellidoUsuario}}
                         </a>
-                        <span class="users-list-date">Today</span>
+                        <span class="users-list-date">Email : {{team.correoElectronico}}</span>
+
+                        <span class="users-list-date">Rol :
+                        {% if team.idRolUsuario == 1 %}
+                        Administrador
+                        {% endif %}
+                        {% if team.idRolUsuario == 2 %}
+                        Funcionario
+                        {% endif %}
+                        {% if team.idRolUsuario == 3 %}
+                        Diseñador
+                        {% endif %}
+                        </span>
                       </li>
-                      <li>
+                      {% endfor %}
+                      
+                      {% comment %} <li>
                         <img src="{% static 'img/user8-128x128.jpg' %}" alt="User Image">
                         <a class="users-list-name" href="#">Norman</a>
                         <span class="users-list-date">Yesterday</span>
@@ -387,7 +413,7 @@
                         <img src="{% static 'img/user3-128x128.jpg' %}" alt="User Image">
                         <a class="users-list-name" href="#">Nadia</a>
                         <span class="users-list-date">15 Jan</span>
-                      </li>
+                      </li> {% endcomment %}
                     </ul>
                     <!-- /.users-list -->
                   </div>
@@ -402,7 +428,7 @@
               <!-- /.col -->
             <!-- /.row -->
             <!-- TABLE: LATEST ORDERS -->
-            <div class="card">
+            {% comment %} <div class="card">
               <div class="card-header border-transparent ">
                 <h3 class="card-title">Ultimas Tareas actualizadas</h3>
                 <div class="card-tools">
@@ -515,7 +541,7 @@
                 <a href="javascript:void(0)" class="btn btn-sm btn-info float-left">Nueva Tarea</a>
               </div>
               <!-- /.card-footer -->
-            </div>
+            </div> {% endcomment %}
             <!-- /.card -->
           </div>
           <!-- /.col -->
