--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,180 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block body %}
+{% block content %}
 <div class="wrapper">
-
-  <!-- Preloader -->
-  <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__wobble" src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60" width="60">
-  </div>
-
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-dark">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="index2.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contacto</a>
-      </li>
-    </ul>
-
-    <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
-      <!-- Navbar Search -->
-      <li class="nav-item">
-        <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-          <i class="fas fa-search"></i>
-        </a>
-        <div class="navbar-search-block">
-          <form class="form-inline">
-            <div class="input-group input-group-sm">
-              <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-              <div class="input-group-append">
-                <button class="btn btn-navbar" type="submit">
-                  <i class="fas fa-search"></i>
-                </button>
-                <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                  <i class="fas fa-times"></i>
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </li>
-      <!-- Notifications Dropdown Menu -->
-      <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="far fa-bell"></i>
-          <span class="badge badge-warning navbar-badge">4</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <span class="dropdown-item dropdown-header">4 Notifications</span>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
-          </a>
-
-        </div>
-      </li>
-            <li class="nav-item dropdown user-menu">
-        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-          <img src="{% static 'img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2" alt="User Image">
-          <span class="d-none d-md-inline">{{datos.email}}</span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <!-- User image -->
-          <li class="user-header bg-primary">
-            <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-
-            <p>
-              {{datos.name}} - {{datos.email}}
-              <small>Inicio de session {{datos.login}} </small>
-            </p>
-              <span class="users-list-date">Rol :
-                        {% if datos.role == 1 %}
-                        Administrador
-                        {% endif %}
-                        {% if datos.role == 2 %}
-                        Funcionario
-                        {% endif %}
-                        {% if datos.role == 3 %}
-                        Diseñador
-                        {% endif %}
-                        </span>
-          </li>
-          <!-- Menu Footer-->
-          <li class="user-footer">
-            <a href="{% url 'logout' %}" class="btn btn-default btn-flat float-right">Cerrar Sesion</a>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-          <i class="fas fa-expand-arrows-alt"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <!-- /.navbar -->
-
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="index2.html" class="brand-link">
-      <img src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Admin TaskList</span>
-    </a>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          {% if datos.role == 1 %}
-            <a href="#" class="d-block">Perfil Admin</a>
-          {% endif %}
-          {% if datos.role == 2 %}
-            <a href="#" class="d-block">Perfil Funcionario</a>
-          {% endif %}
-          {% if datos.role == 3 %}
-            <a href="#" class="d-block">Perfil Diseñador</a>
-          {% endif %}
-
-        </div>
-      </div>
-
-      <!-- SidebarSearch Form -->
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-          {% if datos.role == 1 %}
-          <li class="nav-item menu-open">
-            <a href="./index2.html" class="nav-link active">
-              <i class="nav-icon fa fa-tachometer-alt"></i>
-              <p>
-                Tablero de procesos
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fa fa-chart-pie text-warning"></i>
-              <p>Reportes</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fa fa-clipboard-list text-info"></i>
-              <p>Lista de Tareas</p>
-            </a>
-          </li>
-          {% endif %}
-          {% if datos.role == 2 %}
-            <a href="#" class="d-block">Menu Funcionario</a>
-          {% endif %}
-          {% if datos.role == 3 %}
-            <a href="#" class="d-block">Menu Diseñador</a>
-          {% endif %}
-
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
-
   <!-- Content Wrapper. Contains page content -->
   {% if datos.role == 1 %}
     <div class="content-wrapper">
