Update Menu Profile User

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,28 +86,38 @@
               <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
   
               <p>
-                Alexander Pierce - Web Developer
-                <small>Member since Nov. 2012</small>
+                {{datos.name}} - {{datos.mail}}
+                <small>Inicio de sesion {{datos.login}}</small>
               </p>
             </li>
             <!-- Menu Body -->
             <li class="user-body">
               <div class="row">
-                <div class="col-4 text-center">
-                  <a href="#">Followers</a>
+                <div class="col-12 text-center">
+                  <small>Rol:     
+                  {% if datos.role == 1 %}
+                       Administrador
+                  {% endif %}                  
+                  {% if datos.role == 2 %}
+                       Funcionario
+                  {% endif %}                  
+                  {% if datos.role == 3 %}
+                       Diseñador
+                  {% endif %}
+                  </small>
                 </div>
-                <div class="col-4 text-center">
+                {% comment %} <div class="col-4 text-center">
                   <a href="#">Sales</a>
                 </div>
                 <div class="col-4 text-center">
                   <a href="#">Friends</a>
-                </div>
+                </div> {% endcomment %}
               </div>
               <!-- /.row -->
             </li>
             <!-- Menu Footer-->
             <li class="user-footer">
-              <a href="#" class="btn btn-default btn-flat">Profile</a>
+              {% comment %} <a href="#" class="btn btn-default btn-flat">Profile</a> {% endcomment %}
               <a href="{% url 'logout' %}" class="btn btn-default btn-flat float-right">Cerrar Sesion</a>
             </li>
           </ul>
