--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -65,14 +65,14 @@
         </div>
       </form>
 
-      <div class="social-auth-links text-center mt-2 mb-3">
+      {% comment %} <div class="social-auth-links text-center mt-2 mb-3">
         <a href="#" class="btn btn-block btn-primary">
           <i class="fab fa-facebook mr-2"></i> Ingresar con Facebook
         </a>
         <a href="#" class="btn btn-block btn-danger">
           <i class="fab fa-google mr-2"></i> Ingresar con Google
         </a>
-      </div>
+      </div> {% endcomment %}
       <!-- /.social-auth-links -->
 
       <p class="mb-1">
