--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin TaskList</title>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap5.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
@@ -14,6 +15,10 @@
   <link rel="stylesheet" href="{% static 'plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'css/adminlte.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/tables.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
+
+
 </head>
 <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
@@ -167,8 +172,8 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           {% if datos.role == 1 %}
-          <li class="nav-item menu-open">
-            <a href="{% url 'dashboard' %}" class="nav-link active">
+          <li class="nav-item">
+            <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
               <i class="nav-icon fa fa-tachometer-alt"></i>
               <p>
                 Tablero de procesos
@@ -176,15 +181,27 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fa fa-chart-pie text-warning"></i>
-              <p>Reportes</p>
+            <a href="{% url 'teamwork' %}" class="nav-link {% if datos.menu == 'teamwork' %} active {% endif %}">
+              <i class="nav-icon fas fa-users text-success"></i>
+              <p>Equipo de Trabajo</p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="{% url 'tableTask' %}" class="nav-link">
+            <a href="{% url 'tasklist' %}" class="nav-link {% if datos.menu == 'tableTask' %} active {% endif %}">
               <i class="nav-icon fa fa-clipboard-list text-info"></i>
-              <p>Lista de Tareas</p>
+              <p>Tareas</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link {% if datos.menu == dashboard %} active {% endif %}">
+              <i class="nav-icon fa fa-chart-pie text-warning"></i>
+              <p>Reportes</p>
+          </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'admin' %}" class="nav-link {% if datos.menu == 'admin' %} active {% endif %}">
+              <i class="nav-icon fa fa-clipboard-list text-info"></i>
+              <p>Administración</p>
             </a>
           </li>
           {% endif %}
@@ -222,7 +239,12 @@
 
 <!-- REQUIRED SCRIPTS -->
 <!-- jQuery -->
+<!-- Datatable -->
+{% comment %} <script src="https://code.jquery.com/jquery-3.5.1.js"></script> {% endcomment %}
 <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+<script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script>
+
 <!-- Bootstrap -->
 <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- overlayScrollbars -->
@@ -240,8 +262,11 @@
 <script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
 
 <!-- AdminLTE for demo purposes -->
-<script src="{% static 'js/demo.js' %}"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="{% static 'js/pages/dashboard2.js' %}"></script>
+<script src="{% static 'js/pages/dashboard2.js'%}"></script>
+<script src="{% static 'plugins/jquery-knob/jquery.knob.min.js' %}"></script>
+<script src="{% static 'js/knob.js' %}"></script>
+<script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
+
+
 </body>
 </html>
