Creacion de vistas para el perfil de administrador

--- a/templates/teamwork/workload.html
+++ b/templates/teamwork/workload.html
@@ -138,7 +138,7 @@
                             <div class="col-6 col-md-3 text-center">
                               <div style="display:inline;width:90px;height:90px;"><canvas width="90" height="90"></canvas>
                                 <input type="text" class="knob" value="6.5%" data-skin="tron" data-thickness="0.1"  data-width="120" data-height="120" data-fgcolor="#3c8dbc" style="width: 64px; height: 40px; position: absolute; vertical-align: middle; margin-top: 40px; margin-left: -92px; border: 0px; background: none; font: bold 24px Arial; text-align: center; color: rgb(60, 141, 188); padding: 0px; appearance: none;"></div>
-                              <div class="knob-label">Tareas Asignadas</div>
+                              <div class="knob-label">% de Tareas Asignadas</div>
                               
                             </div>
                             <!-- ./col -->
@@ -147,7 +147,7 @@
                               <input type="text" class="knob" value="1.6%" data-skin="tron" data-thickness="0.1"  data-width="120" data-height="120" data-fgcolor="#f56954" style="width: 64px; height: 40px; position: absolute; vertical-align: middle; margin-top: 40px; margin-left: -92px; border: 0px; background: none; font: bold 24px Arial; text-align: center; color: rgb(245, 105, 84); padding: 0px; appearance: none;">
                               </div>
           
-                              <div class="knob-label">Tareas Atrasadas</div>
+                              <div class="knob-label"> % de Tareas Atrasadas</div>
                             </div>
                             <!-- ./col -->
                             <div class="col-6 col-md-3 text-center">
@@ -155,7 +155,7 @@
                             <input type="text" class="knob" value="91%" data-skin="tron" data-thickness="0.1"  data-width="120" data-height="120" data-fgcolor="#00a65a" style="width: 64px; height: 40px; position: absolute; vertical-align: middle; margin-top: 40px; margin-left: -92px; border: 0px; background: none; font: bold 24px Arial; text-align: center; color: rgb(0, 166, 90); padding: 0px; appearance: none;">
                               </div>
           
-                              <div class="knob-label">Tareas a tiempo</div>
+                              <div class="knob-label">% de Tareas a tiempo</div>
                             </div>
                           </div>
 
