--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap5.min.css">
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href=" {% static 'plugins/fontawesome-free/css/all.min.css' %} ">
   <!-- overlayScrollbars -->
@@ -20,11 +22,13 @@
 
 
 </head>
+
 <body class="hold-transition dark-mode sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
-<div class="wrapper">
+  <div class="wrapper">
     <!-- Preloader -->
     <div class="preloader flex-column justify-content-center align-items-center">
-      <img class="animation__wobble" src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60" width="60">
+      <img class="animation__wobble" src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTELogo" height="60"
+        width="60">
     </div>
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-dark">
@@ -40,7 +44,7 @@
           <a href="#" class="nav-link">Contacto</a>
         </li>
       </ul>
-  
+
       <!-- Right navbar links -->
       <ul class="navbar-nav ml-auto">
         <!-- Navbar Search -->
@@ -77,7 +81,7 @@
               <i class="fas fa-envelope mr-2"></i> 4 new messages
               <span class="float-right text-muted text-sm">3 mins</span>
             </a>
-  
+
           </div>
         </li>
         <li class="nav-item dropdown user-menu">
@@ -89,7 +93,7 @@
             <!-- User image -->
             <li class="user-header bg-primary">
               <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-  
+
               <p>
                 {{datos.name}} - {{datos.mail}}
                 <small>Inicio de sesion {{datos.login}}</small>
@@ -99,16 +103,16 @@
             <li class="user-body">
               <div class="row">
                 <div class="col-12 text-center">
-                  <small>Rol:     
-                  {% if datos.role == 1 %}
-                       Administrador
-                  {% endif %}                  
-                  {% if datos.role == 2 %}
-                       Funcionario
-                  {% endif %}                  
-                  {% if datos.role == 3 %}
-                       Diseñador
-                  {% endif %}
+                  <small>Rol:
+                    {% if datos.role == 1 %}
+                    Administrador
+                    {% endif %}
+                    {% if datos.role == 2 %}
+                    Funcionario
+                    {% endif %}
+                    {% if datos.role == 3 %}
+                    Diseñador
+                    {% endif %}
                   </small>
                 </div>
                 {% comment %} <div class="col-4 text-center">
@@ -136,137 +140,246 @@
     </nav>
     <!-- /.navbar -->
 
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="{% url 'dashboard' %}" class="brand-link">
-      <img src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Admin TaskList</span>
-    </a>
+    <!-- Main Sidebar Container -->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      <!-- Brand Logo -->
+      <a href="{% url 'dashboard' %}" class="brand-link">
+        <img src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+          style="opacity: .8">
+        <span class="brand-text font-weight-light">Admin TaskList</span>
+      </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          {% if datos.role == 1 %}
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <!-- Sidebar user panel (optional) -->
+        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+          <div class="image">
+            <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
+          </div>
+          <div class="info">
+            {% if datos.role == 1 %}
             <a href="#" class="d-block">Perfil Admin</a>
-          {% endif %}
-          {% if datos.role == 2 %}
+            {% endif %}
+            {% if datos.role == 2 %}
             <a href="#" class="d-block">Perfil Funcionario</a>
-          {% endif %}
-          {% if datos.role == 3 %}
+            {% endif %}
+            {% if datos.role == 3 %}
             <a href="#" class="d-block">Perfil Diseñador</a>
-          {% endif %}
+            {% endif %}
 
+          </div>
         </div>
-      </div>
 
-      <!-- SidebarSearch Form -->
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
+        <!-- SidebarSearch Form -->
+        <!-- Sidebar Menu -->
+        <nav class="mt-2">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          {% if datos.role == 1 %}
-          <li class="nav-item">
-            <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
-              <i class="nav-icon fa fa-tachometer-alt"></i>
-              <p>
-                Tablero de procesos
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="{% url 'teamwork' %}" class="nav-link {% if datos.menu == 'teamwork' %} active {% endif %}">
-              <i class="nav-icon fas fa-users text-success"></i>
-              <p>Equipo de Trabajo</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="{% url 'tasklist' %}" class="nav-link {% if datos.menu == 'tableTask' %} active {% endif %}">
-              <i class="nav-icon fa fa-clipboard-list text-info"></i>
-              <p>Tareas</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link {% if datos.menu == dashboard %} active {% endif %}">
-              <i class="nav-icon fa fa-chart-pie text-warning"></i>
-              <p>Reportes</p>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="{% url 'admin' %}" class="nav-link {% if datos.menu == 'admin' %} active {% endif %}">
-              <i class="nav-icon fa fa-clipboard-list text-info"></i>
-              <p>Administración</p>
-            </a>
-          </li>
-          {% endif %}
-          {% if datos.role == 2 %}
+            {% if datos.role == 1 %}
+            <li class="nav-item">
+              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
+                <i class="nav-icon fa fa-tachometer-alt"></i>
+                <p>
+                  Tablero de procesos
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'teamwork' %}" class="nav-link {% if datos.menu == 'teamwork' %} active {% endif %}">
+                <i class="nav-icon fas fa-users text-success"></i>
+                <p>Equipo de Trabajo</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'tasklist' %}" class="nav-link {% if datos.menu == 'tableTask' %} active {% endif %}">
+                <i class="nav-icon fa fa-clipboard-list text-info"></i>
+                <p>Tareas</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link {% if datos.menu == dashboard %} active {% endif %}">
+                <i class="nav-icon fa fa-chart-pie text-warning"></i>
+                <p>Reportes</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <i class="nav-icon fa fa-clipboard-list text-info"></i>
+                <p>Administración
+                  <i class="right fas fa-angle-left"></i>
+                </p>
+              </a>
+              <ul class="nav nav-treeview" style="display: none;">
+                <li class="nav-item">
+                  <a href="{% url 'admin' %}" class="nav-link {% if datos.menu == 'admin' %} active {% endif %}">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Lista de tareas
+                      <i class="right fas"></i>
+                    </p>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Flujo de tareas
+                      <i class="right fas fa-angle-left"></i>
+                    </p>
+                  </a>
+                  <ul class="nav nav-treeview" style="display: none;">
+                    <li class="nav-item">
+                      <a href="{% url 'workflowlist' %}"
+                        class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Listar</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'workflownew' %}"
+                        class="nav-link {% if datos.menu == 'workflownew' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Crear</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Usuarios</p>
+                    <i class="right fas fa-angle-left"></i>
+                  </a>
+                  <ul class="nav nav-treeview" style="display: none;">
+                    <li class="nav-item">
+                      <a href="{% url 'listusers' %}"
+                        class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Listar</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'newuser' %}"
+                        class="nav-link {% if datos.menu == 'newuser' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Crear</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Unidad Interna</p>
+                    <i class="right fas fa-angle-left"></i>
+                  </a>
+                  <ul class="nav nav-treeview" style="display: none;">
+                    <li class="nav-item">
+                      <a href="{% url 'listunits' %}"
+                        class="nav-link {% if datos.menu == 'listunits' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Listar</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'newunits' %}"
+                        class="nav-link {% if datos.menu == 'newunits' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Crear</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Roles</p>
+                    <i class="right fas fa-angle-left"></i>
+                  </a>
+                  <ul class="nav nav-treeview" style="display: none;">
+                    <li class="nav-item">
+                      <a href="{% url 'workflowlist' %}"
+                        class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Listar</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'newrole' %}"
+                        class="nav-link {% if datos.menu == 'newrole' %} active {% endif %}">
+                        <i class="far fa-dot-circle nav-icon"></i>
+                        <p>Crear</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            {% endif %}
+            {% if datos.role == 2 %}
             <a href="#" class="d-block">Menu Funcionario</a>
-          {% endif %}
-          {% if datos.role == 3 %}
+            {% endif %}
+            {% if datos.role == 3 %}
             <a href="#" class="d-block">Menu Diseñador</a>
-          {% endif %}
+            {% endif %}
 
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
-  <section>
-    {% block content %}   
-    {% endblock %}
-  </section>
-  
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <strong>Copyright &copy; 2020-2021 <a href="#">Admin TaskList</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.1.0
-    </div>
-  </footer>
-  <!-- ./wrapper -->
-</div>
+          </ul>
+        </nav>
+        <!-- /.sidebar-menu -->
+      </div>
+      <!-- /.sidebar -->
+    </aside>
+    <section>
+      {% block content %}
+      {% endblock %}
+    </section>
 
-
+    <!-- Main Footer -->
+    <footer class="main-footer">
+      <strong>Copyright &copy; 2020-2021 <a href="#">Admin TaskList</a>.</strong>
+      All rights reserved.
+      <div class="float-right d-none d-sm-inline-block">
+        <b>Version</b> 3.1.0
+      </div>
+    </footer>
+    <!-- ./wrapper -->
+  </div>
 
 
-<!-- REQUIRED SCRIPTS -->
-<!-- jQuery -->
-<!-- Datatable -->
-{% comment %} <script src="https://code.jquery.com/jquery-3.5.1.js"></script> {% endcomment %}
-<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
-<script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script>
 
-<!-- Bootstrap -->
-<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- overlayScrollbars -->
-<script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
-<!-- AdminLTE App -->
-<script src="{% static 'js/adminlte.js' %}"></script>
 
-<!-- PAGE PLUGINS -->
-<!-- jQuery Mapael -->
-<script src="{% static 'plugins/jquery-mousewheel/jquery.mousewheel.js' %}"></script>
-<script src="{% static 'plugins/raphael/raphael.min.js' %}"></script>
-<script src="{% static 'plugins/jquery-mapael/jquery.mapael.min.js' %}"></script>
-<script src="{% static 'plugins/jquery-mapael/maps/usa_states.min.js' %}"></script>
-<!-- ChartJS -->
-<script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
+  <!-- REQUIRED SCRIPTS -->
+  <!-- jQuery -->
+  <!-- Datatable -->
+  {% comment %} <script src="https://code.jquery.com/jquery-3.5.1.js"></script> {% endcomment %}
+  <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+  <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script>
 
-<!-- AdminLTE for demo purposes -->
-<script src="{% static 'js/pages/dashboard2.js'%}"></script>
-<script src="{% static 'plugins/jquery-knob/jquery.knob.min.js' %}"></script>
-<script src="{% static 'js/knob.js' %}"></script>
-<script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
+  <!-- Bootstrap -->
+  <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <!-- overlayScrollbars -->
+  <script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
+  <!-- AdminLTE App -->
+  <script src="{% static 'js/adminlte.js' %}"></script>
+
+  <!-- PAGE PLUGINS -->
+  <!-- jQuery Mapael -->
+  <script src="{% static 'plugins/jquery-mousewheel/jquery.mousewheel.js' %}"></script>
+  <script src="{% static 'plugins/raphael/raphael.min.js' %}"></script>
+  <script src="{% static 'plugins/jquery-mapael/jquery.mapael.min.js' %}"></script>
+  <script src="{% static 'plugins/jquery-mapael/maps/usa_states.min.js' %}"></script>
+  <!-- ChartJS -->
+  <script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
+
+  <!-- AdminLTE for demo purposes -->
+  <script src="{% static 'js/pages/dashboard2.js'%}"></script>
+  <script src="{% static 'plugins/jquery-knob/jquery.knob.min.js' %}"></script>
+  <script src="{% static 'js/knob.js' %}"></script>
+  <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
 
 
 </body>
+
 </html>
