Configuracion de Perfil Funcionario en Vista base

--- a/templates/workflow/workflowlist.html
+++ b/templates/workflow/workflowlist.html
@@ -56,16 +56,14 @@
                                                             <th class="text-center">ID</th>
                                                             <th class="text-center">Nombre</th>
                                                             <th class="text-center">Descripcion</th>
-                                                            <th class="text-center">Estado</th>
                                                             <th class="text-center">Accion</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
                                                             <td class="text-center">183</td>
-                                                            <td class="text-center">John Doe</td>
-                                                            <td class="text-center">11-7-2014</td>
-                                                            <td class="text-center">Aprobada</td>
+                                                            <td class="text-center">Tarea mantención servidor</td>
+                                                            <td class="text-center">Mantencion mensual del servidor de produccion</td>
                                                             <td class="text-center">
                                                                 <a class="btn btn-primary btn-sm" href="#">
                                                                     <i class="fas fa-folder">
