--- a/templates/base.html
+++ b/templates/base.html
@@ -299,8 +299,8 @@
                   </a>
                   <ul class="nav nav-treeview" style="display: none;">
                     <li class="nav-item">
-                      <a href="{% url 'workflowlist' %}"
-                        class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
+                      <a href="{% url 'listrole' %}"
+                        class="nav-link {% if datos.menu == 'listrole' %} active {% endif %}">
                         <i class="far fa-dot-circle nav-icon"></i>
                         <p>Listar</p>
                       </a>
@@ -318,6 +318,34 @@
             </li>
             {% endif %}
             {% if datos.role == 2 %}
+            <li class="nav-item">
+              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
+                <i class="nav-icon fa fa-tachometer-alt"></i>
+                <p>
+                  Resumen de tareas
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
+                <i class="nav-icon"></i>
+                <p>
+                  Tareas
+                  <i class="right fas fa-angle-left "></i>
+                </p>
+              </a>
+              <ul class="nav nav-treeview" style="display: none;">
+                <li class="nav-item">
+                  <a href="{% url 'admin' %}" class="nav-link {% if datos.menu == 'admin' %} active {% endif %}">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>
+                      Lista de tareas
+                      <i class="right fas"></i>
+                    </p>
+                  </a>
+                </li>
+                </ul>
+            </li>
             <a href="#" class="d-block">Menu Funcionario</a>
             {% endif %}
             {% if datos.role == 3 %}
