--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -2,10 +2,9 @@
 {% load static %}
 
 {% block content %}
-{% if datos.role == 1 %}
 <div class="wrapper">
   <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+  <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
@@ -29,10 +28,11 @@
       <div class="container-fluid">
         <!-- Info boxes -->
         <div class="row">
+            {% if  datos.role == 1 or datos.role == 2%}
           <div class="col-12 col-sm-6 col-md-3">
+
             <div class="info-box">
               <span class="info-box-icon bg-info elevation-1"><i class="fa fa-tasks"></i></span>
-
               <div class="info-box-content">
                 <span class="info-box-text">Total de Tareas</span>
                 <span class="info-box-number">
@@ -41,10 +41,14 @@
                   <small>%</small> -->
                 </span>
               </div>
+
+
               <!-- /.info-box-content -->
             </div>
             <!-- /.info-box -->
           </div>
+          {% endif %}
+
           <!-- /.col -->
           <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box mb-3">
@@ -164,36 +168,37 @@
         </div>
         <!-- /.row -->
         <!-- Main row -->
+        {% if datos.role == 1 %}
         <div class="row">
           <!-- Left col -->
           <div class="col-md-12">
             <!-- /.card -->
-              <!-- /.col -->
-              <div class="col-md-">
-                <!-- USERS LIST -->
-                <div class="card">
-                  <div class="card-header">
-                    <h3 class="card-title">Equipo</h3>
-                    <div class="card-tools">
-                      <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                        <i class="fas fa-minus"></i>
-                      </button>
-                      <button type="button" class="btn btn-tool" data-card-widget="remove">
-                        <i class="fas fa-times"></i>
-                      </button>
-                    </div>
+            <!-- /.col -->
+            <div class="col-md-">
+              <!-- USERS LIST -->
+              <div class="card">
+                <div class="card-header">
+                  <h3 class="card-title">Equipo</h3>
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-tool" data-card-widget="remove">
+                      <i class="fas fa-times"></i>
+                    </button>
                   </div>
-                  <!-- /.card-header -->
-                  <div class="card-body p-0">
-                    <ul class="users-list clearfix">
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body p-0">
+                  <ul class="users-list clearfix">
                     {% for team,img in datos.usuarios %}
-                      <li>
-                        <img src="{{img.picture.large}}" alt="User Image">
-                        <a class="users-list-name" href="#">{{team.nombreUsuario}} {{team.apellidoUsuario}}
-                        </a>
-                        <span class="users-list-date">Email : {{team.correoElectronico}}</span>
+                    <li>
+                      <img src="{{img.picture.large}}" alt="User Image">
+                      <a class="users-list-name" href="#">{{team.nombreUsuario}} {{team.apellidoUsuario}}
+                      </a>
+                      <span class="users-list-date">Email : {{team.correoElectronico}}</span>
 
-                        <span class="users-list-date">Rol :
+                      <span class="users-list-date">Rol :
                         {% if team.idRolUsuario == 1 %}
                         Administrador
                         {% endif %}
@@ -203,33 +208,35 @@
                         {% if team.idRolUsuario == 3 %}
                         Diseñador
                         {% endif %}
-                        </span>
-                      </li>
-                      {% endfor %}
-                      
-                    </ul>
-                    <!-- /.users-list -->
-                  </div>
-                  <!-- /.card-body -->
-                  <div class="card-footer text-center">
-                    <a href="javascript:">Ver todo el Equipo</a>
-                  </div>
-                  <!-- /.card-footer -->
+                      </span>
+                    </li>
+                    {% endfor %}
+
+                  </ul>
+                  <!-- /.users-list -->
                 </div>
-                <!--/.card -->
+                <!-- /.card-body -->
+                <div class="card-footer text-center">
+                  <a href="javascript:">Ver todo el Equipo</a>
+                </div>
+                <!-- /.card-footer -->
               </div>
-              <!-- /.col -->
+              <!--/.card -->
+            </div>
+            <!-- /.col -->
             <!-- /.row -->
 
           </div>
           <!-- /.col -->
         </div>
+        {% endif %}
         <!-- /.row -->
-      </div><!--/. container-fluid -->
+      </div>
+      <!--/. container-fluid -->
     </section>
     <!-- /.content -->
   </div>
-  {% endif %}
+
 
   <!-- /.content-wrapper -->
 
