--- a/templates/role/rolelist.html
+++ b/templates/role/rolelist.html
@@ -7,14 +7,14 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>Flujo de tareas</h1>
+                        <h1>Mantenedor de Roles</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item">
                                 <a href="{% url 'dashboard' %}">Home</a>
                             </li>
-                            <li class="breadcrumb-item active">Flujo de tareas</li>
+                            <li class="breadcrumb-item active">Mantenedor de Roles</li>
                         </ol>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                                     <div class="card card-body">
                                         <div class="card">
                                             <div class="card-header">
-                                                <h3 class="card-title">Mantenedor Flujo Tareas</h3>
+                                                <h3 class="card-title">Mantenedor de Roles</h3>
 
                                                 <div class="card-tools">
                                                     <div class="input-group input-group-sm" style="width: 150px;">
@@ -56,16 +56,14 @@
                                                             <th class="text-center">ID</th>
                                                             <th class="text-center">Nombre</th>
                                                             <th class="text-center">Descripcion</th>
-                                                            <th class="text-center">Estado</th>
                                                             <th class="text-center">Accion</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
                                                             <td class="text-center">183</td>
-                                                            <td class="text-center">John Doe</td>
-                                                            <td class="text-center">11-7-2014</td>
-                                                            <td class="text-center">Aprobada</td>
+                                                            <td class="text-center">Administrador</td>
+                                                            <td class="text-center">Perfil del administrador del sistema</td>
                                                             <td class="text-center">
                                                                 <a class="btn btn-primary btn-sm" href="#">
                                                                     <i class="fas fa-folder">
