--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -47,7 +47,7 @@
             </div>
             <!-- /.info-box -->
           </div>
-          {% endif %}
+
 
           <!-- /.col -->
           <div class="col-12 col-sm-6 col-md-3">
@@ -79,6 +79,7 @@
             </div>
             <!-- /.info-box -->
           </div>
+
           <!-- /.col -->
           <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box mb-3">
@@ -92,6 +93,35 @@
             </div>
             <!-- /.info-box -->
           </div>
+
+          {% endif %}
+
+        {% if datos.role == 3 %}
+            <div class="col-12 col-sm-6 col-md-3">
+            <div class="info-box mb-3">
+              <span class="info-box-icon bg-info elevation-1"><i class="fas fa-history"></i></i></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Historial de flujos de tareas</span>
+                <span class="info-box-number">232</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+            <!-- /.info-box -->
+          </div>
+                    <div class="col-12 col-sm-6 col-md-3">
+            <div class="info-box mb-3">
+              <span class="info-box-icon bg-success elevation-1"><i class="fas fa-clipboard-list"></i></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Flujos de tareas en proceso</span>
+                <span class="info-box-number">43</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+            <!-- /.info-box -->
+          </div>
+        {% endif %}
           <!-- /.col -->
         </div>
         <!-- /.row -->
